Further debugging, implements GisGraphy